--- a/api/package.json
+++ b/api/package.json
@@ -5,17 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "razorpay": "^2.8.3",
+    "request": "^2.88.2"
   }
 }
