--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
-MONGO_URL = mongodb+srv://sa:sa@cluster0.eco6b9x.mongodb.net/netflix?retryWrites=true&w=majority
+MONGODB_URL = mongodb+srv://vercel-admin-user:GXRdQIwNOGwQioMx@cluster0.4jl1rbk.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 SECRET_KEY = chie
 RAZOR_PAY_KEY_ID = rzp_test_VrPQDN2vYHTGkf
 RAZOR_PAY_KEY_SECRET = mbbvlI6Vl7ZBjQpCP63hiYN1
